--- a/build.gradle
+++ b/build.gradle
@@ -192,7 +192,8 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
       entry 'guava'
     }
-
+    //CVE-2021-28170
+    dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
   }
 }
 
